--- a/src/my-app.html
+++ b/src/my-app.html
@@ -107,6 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-view1 name="view1"></my-view1>
           <my-view2 name="view2"></my-view2>
           <my-view3 name="view3"></my-view3>
+          <my-view6 name="view6"></my-view6>
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
@@ -134,7 +135,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ],
 
       _routePageChanged: function(page) {
-        this.page = page || 'view1';
+        this.page = page || 'view6';
       },
 
       _pageChanged: function(page) {
