add font, color.
implement rain cloud animation.

--- a/index.html
+++ b/index.html
@@ -50,13 +50,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="/src/my-app.html">
   <style>
 
+    @font-face {
+      font-family: aiasans-condensed;
+      src: url(./font/AIASans-Condensed-500.ttf);
+    }
+
     body {
       margin: auto;
       padding: 0px;
-      font-family: 'Roboto', 'Noto', sans-serif;
+      font-family: aiasans-condensed;
       line-height: 1.5;
       width: 1024px;
       background-color: #fff;
+      color: #363E3F;
     }
 
   </style>
