--- a/src/my-view6.html
+++ b/src/my-view6.html
@@ -97,37 +97,35 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         74% { opacity: 0; }
         75% { opacity: 1; }
         100% { opacity: 1; }
-
       }
-      /*@-webkit-keyframes animatedWalkerUnhappyOne {
+      @-webkit-keyframes animatedWalkerUnhappyOne {
         0% { opacity: 1; }
-        24% { opacity: 1; }
-        25% { opacity: 0; }
+        25% { opacity: 1; }
+        26% { opacity: 0; }
         100% { opacity: 0; }
       }
       @-webkit-keyframes animatedWalkerUnhappyTwo {
         0% { opacity: 0; }
         24% { opacity: 0; }
         25% { opacity: 1; }
-        49% { opacity: 1; }
-        50% { opacity: 0; }
+        50% { opacity: 1; }
+        51% { opacity: 0; }
         100% { opacity: 0; }
       }
       @-webkit-keyframes animatedWalkerUnhappyThree {
         0% { opacity: 0; }
         49% { opacity: 0; }
         50% { opacity: 1; }
-        74% { opacity: 1; }
-        75% { opacity: 0; }
+        75% { opacity: 1; }
+        76% { opacity: 0; }
         100% { opacity: 0; }
       }
       @-webkit-keyframes animatedWalkerUnhappyFour {
         0% { opacity: 0; }
         74% { opacity: 0; }
         75% { opacity: 1; }
-        99% { opacity: 1; }
-        100% { opacity: 0; }
-      }*/
+        100% { opacity: 1; }
+      }
       .walker-wrapper {
 
       }
